--- a/index.html
+++ b/index.html
@@ -199,11 +199,13 @@
       </section>
 
       <section class="cover">
-        <a class="cover__overlay" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <div class="cover__overlay">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие от столицы до
             Байкала
             на&nbsp;электричках</p>
+          </div>
         </a>
       </section>
 
