--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Путешествие по России</title>
+  <title>Курс Таро </title>
   <link rel="stylesheet" href="./styles/index.css">
 </head>
 
@@ -12,201 +12,174 @@
   <div class="page">
 
     <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип заголовка">
-      <nav class="header__lang-links">
-        <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
-        <a class="header__lang-link" href="#">En</a>
-      </nav>
+      <div class="header__overlay">
+        <h1 class="header__title">Курс Таро</h1>
+        <p class="header__subtitle">на базе Мастерской "Сезонов Души"</p>
+      </div>
     </header>
 
     <main class="content">
 
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Фотография полки">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <h2 class="lead__title">Создатели Курса авторы проекта Сезоны Души</h2>
+        <p class="lead__subtitle">Алена Олешко и Ольга Давыдова.</p>
+        <h2 class="lead__title">Мастер Курса личная Ученица Сезонов Души, Мастер Таро, АстроПсихолог</h2>
+        <p class="lead__subtitle"> Александра Голубкова.</p>
+        <img class="lead__image" src="./images/IMG-20201107-WA0006.jpg" alt="Фотография">
+        <p class="lead__caption"></p>
       </section>
 
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-          —
-          смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <h2 class="intro__title">Курс длится 10 недель. 10 живых вебинаров с Александрой Голубковой: один вебинар в
+          неделю.</h2>
+        <p class="intro__text">
+          Доступ в Мастерские «Сезонов Души» будет открыта 6 месяцев.
+          В Мастерской также вы найдете:</p>
         <ul class="intro__list">
-          <li>Часовых поясов
-            <span class="intro__span-accent">11</span>
-          </li>
-          <li>Объектов природного наследия ЮНЕСКО
-            <span class="intro__span-accent">12</span>
-          </li>
-          <li>Объектов культурного наследия ЮНЕСКО
-            <span class="intro__span-accent">16</span>
-          </li>
-          <li>Природных заповедников
-            <span class="intro__span-accent">105</span>
-          </li>
-          <li>Аэропортов
-            <span class="intro__span-accent">241</span>
-          </li>
+          <li> - статьи о Таро по каждому модулю;</li>
+          <li> - домашние задания по каждому Модулю;</li>
+          <li> - описания арканов;</li>
+          <li> - практики с Таро;</li>
         </ul>
+        <p class="intro__text">Также для всех участниц курса доступ в закрытую группу Фейсбук, в которой вы сможете
+          делиться, общаться,
+          задавать вопросы, выкладывать свои домашние задания, обсуждать, размышлять и многое другое.
+          По окончанию обучения Вы получите Сертификат.</p>
       </section>
 
-      <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атxарва-тульси">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Ариса">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка-1">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Эргаки">
-      </section>
 
       <section class="places">
         <article class="place">
           <div class="place__up">
-            <h2 class="place__title">Куршская коса</h2>
-            <div class="place__website">
-              <abbr class="place__url-heading">url</abbr>
-              <a class="place__link" target="_blank" href="http://park-kosa.ru">park-kosa.ru</a>
-            </div>
+            <h2 class="place__title">Модуль Первый</h2>
+            <p class="place__title">«Вводный».</p>
           </div>
           <div class="place__down">
-            <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
+            <img class="place__image" src="./images/IMG-20201107-WA0003.jpg" alt="Вводный">
             <div class="place__text">
-              <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть
-                два
-                водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
-                моря
-                с
-                другой. Уникальная природная зона на краю российского анклава.</p>
-              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
-                путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, —
-                и
-                немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
-                в
-                спокойствие природы и запах стального, прохладного моря.</p>
+              <p class="place__paragraph">Правила работы с Таро.
+                Практика «Карта Дня».</p>
+              <p class="place__paragraph"></p>
             </div>
           </div>
         </article>
         <article class="place">
           <div class="place__up">
-            <h2 class="place__title">Кольский</h2>
-            <div class="place__website">
-              <abbr class="place__url-heading">url</abbr>
-              <a class="place__link" target="_blank"
-                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
-                Geographic</a>
-            </div>
+            <h2 class="place__title">Модуль Второй</h2>
+            <p class="place__title">«Старшие Арканы. Дневной Путь».</p>
           </div>
           <div class="place__down">
-            <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
+            <img class="place__image" src="./images/IMG-20201107-WA0008.jpg" alt="Дневной Путь">
             <div class="place__text">
-              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом.
-                Саамская тундра, от которой на юг —
-                тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали
-                историю
-                арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных
-                воспоминаний
-                об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
-                а
-                от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с
-                билетом
-                в Мурманск.</p>
+              <p class="place__paragraph">Кристалл Структуры Колоды Таро.
+                Кристалл Личности: Арканы 0-IV.
+                Арканы V – X: путь развития Эго и Личности.
+              </p>
+              <p class="place__paragraph"></p>
             </div>
           </div>
         </article>
         <article class="place">
           <div class="place__up">
-            <h2 class="place__title">Алтай</h2>
-            <div class="place__website">
-              <abbr class="place__url-heading">url</abbr>
-              <a class="place__link" target="_blank"
-                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
-            </div>
+            <h2 class="place__title">Модуль Третий</h2>
+            <p class="place__title">«Старшие Арканы. Ночной Путь».</p>
           </div>
           <div class="place__down">
-            <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+            <img class="place__image" src="./images/IMG-20201107-WA0004.jpg" alt="Ночной Путь">
             <div class="place__text">
-              <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки
-                и
-                озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
-                горным
-                воздухом.</p>
-              <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше
-                всего
-                летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами
-                летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+              <p class="place__paragraph">Арканы XI – XVIII: Путешествие в глубины Души.
+                Арканы XIX – XXI: Кристалл Интеграции.
+              </p>
+              <p class="place__paragraph"></p>
             </div>
           </div>
         </article>
         <article class="place">
           <div class="place__up">
-            <h2 class="place__title">Зимний Байкал</h2>
-            <div class="place__website">
-              <abbr class="place__url-heading">url</abbr>
-              <a class="place__link" target="_blank" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-            </div>
+            <h2 class="place__title">Модуль Четвертый </h2>
+            <p class="place__title">«Фигурные Карты. Стихии/Масти/Ранги».</p>
           </div>
           <div class="place__down">
-            <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний байкал">
+            <img class="place__image" src="./images/IMG-20201107-WA0009.jpg" alt="Стихии">
             <div class="place__text">
-              <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
-                России.</p>
-              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место
-                для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-                фестивале
-                «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+              <p class="place__paragraph"></p>
             </div>
           </div>
         </article>
         <article class="place">
           <div class="place__up">
-            <h2 class="place__title">Карелия</h2>
-            <div class="place__website">
-              <abbr class="place__url-heading">url</abbr>
-              <a class="place__link" target="_blank" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-            </div>
+            <h2 class="place__title">Модуль Пятый </h2>
+            <p class="place__title">«Номерные Арканы». Расклад «Большой Кельтский Крест»</p>
           </div>
           <div class="place__down">
-            <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
+            <img class="place__image" src="./images/IMG-20201107-WA0010.jpg" alt="Арканы">
             <div class="place__text">
-              <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая
-                тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров —
-                леса
-                карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
-                больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его
-                Иван
-                Грозный.
-                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+              <p class="place__paragraph"></p>
+            </div>
+          </div>
+        </article>
+        <article class="place">
+          <div class="place__up">
+            <h2 class="place__title">Модуль Шестой </h2>
+            <p class="place__title">«Мастерство Процесса»</p>
+          </div>
+          <div class="place__down">
+            <img class="place__image" src="./images/IMG-20201107-WA0007.jpg" alt="Мастерство Процесса">
+            <div class="place__text">
+              <p class="place__paragraph">Ловушки Таролога.
+                Дополнительный расклад.
+              </p>
             </div>
           </div>
         </article>
       </section>
 
+      <section class="intro">
+        <h2 class="intro__title">Дополнительно в Золотой пакет* входит:</h2>
+        <p class="intro__text">
+          ∙ 6 встреч (по теме каждого модуля) с ведущей Курса в малых группах в программе Zoom, в рамках которых вы
+          сможете:
+        </p>
+        <ul class="intro__list">
+          <li> - глубже проработать энергии арканов;
+          </li>
+          <li> - задать напрямую свои вопросы по домашним заданиям и материалу Мастерской;
+          </li>
+          <li> - практиковаться в онлайн формате;
+          </li>
+          <li> ∙ личная инициация Таро по окончанию курса;
+          </li>
+          <li> ∙ запись всех встреч в мини-группах на неограниченный срок;
+          </li>
+          <li> * Количество Золотых пакетов ограничено: 2 группы по 6 человек.
+          </li>
+        </ul>
+      </section>
+      <section class="intro">
+        <h2 class="intro__title">Для прохождения курса вам понадобятся:</h2>
+        <ul class="intro__list">
+          <li> - Колода Таро Райдера Уэйта;
+          </li>
+          <li> - Персональный компьютер или Смартфон с доступом в сеть Интернет;
+          </li>
+          <li>- практиковаться в онлайн формате;
+          </li>
+          <li> - Установленная на персональный компьютер или смартфон программа Zoom;
+          </li>
+        </ul>
+      </section>
+
       <section class="cover">
-        <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <div class="cover__overlay">
-          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие от столицы до
-            Байкала
-            на&nbsp;электричках</p>
-          </div>
-        </a>
+        <div class="cover__overlay">
+          <h2 class="cover__title">После Курса вы сможете:</h2>
+          <p class="cover__subtitle">- развить свою интуицию;
+            - лучше понимать себя, других людей и Знаки Мира;
+            - делать расклады себе и другим людям;
+            - всегда быстро находить ответы на интересующие вас вопросы;
+            - найти новых подруг, единомышленниц и просто людей, разговаривающих с вами на одном языке, в том числе –
+            на языке Таро;
+            - сделать практику таро своим источником дохода.</p>
+        </div>
       </section>
 
     </main>
@@ -215,23 +188,14 @@
       <nav>
         <ul class="footer__links">
           <li class="footer__child">
-            <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
-          </li>
-          <li class="footer__child">
-            <a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Контакты</a>
           </li>
           <li class="footer__child">
             <a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
           </li>
-          <li class="footer__child">
-            <a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a>
-          </li>
-          <li class="footer__child">
-            <a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a>
-          </li>
         </ul>
       </nav>
-      <p class="footer__copyright">© 2020. Александр Чигарев</p>
+      <p class="footer__copyright">© 2020. Tangom</p>
     </footer>
 
   </div>
